# python-mock-physical-twin

./: .gitignore  Dockerfile  README.md  build.sh  hell_config.yml  new_config.yml  processor.py  push.sh  pyproject.toml  requirements.txt  smarthome.yml  start.sh
analysis/: phase_1.ipynb  phase_1_2_3.ipynb  phase_2.ipynb  phase_3.ipynb  phase_4_5.ipynb
analysis/messages/: analysis_result.txt  mqtt_msg_traces_analyzer.py
api/: PhysicalTwin-Emulator.postman_collection.json
app/: physical_twin_emulator.py
app/device/: actuator.py  iot_device.py  sensor.py
app/opcua-client/: opcua_client.py  pub-sub_client.py  req-res_client.py
app/protocol/: __init__.py  http_protocol.py  mqtt_protocol.py  opcua_protocol.py  protocol.py  simulation_bridge_amqp_protocol.py  simulation_bridge_mqtt_protocol.py  simulation_bridge_rest_protocol.py
app/provider/: provider.py  simulation_bridge_mqtt.py
backup/: all.py
conf/: http_simulation_config.yaml  http_test_config.yaml  mqtt_acc_config.yaml  mqtt_and_opcua_test_config.yaml  mqtt_simulation_config.yaml  mqtt_test_config.yaml  mqtt_use.yaml  opcua_test_config.yaml  rest_use.yaml  simulation.yaml  simulation_bridge_amqp_test_config.yaml  simulation_bridge_mqtt_test_config.yaml  simulation_bridge_rest_test_config.yaml
data/: humidity.csv  latlong.csv
docs/: original_backup.md  simulation_bridge.md  simulation_bridge_routing.md
examples/: cars.yml  processor.py  smarthome.yml  stations.yml
sb-conf/: mqtt_use.yaml  simulation.yaml
src/: app_config.py  cli.py  main.py  main2.py
test/: http_test.py  mqtt_test.py
(+83 files in other folders)
