[project]
name = "mockpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicola Ricciardi", email = "ricciardincl@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyYAML~=6.0.0",
    "pydantic~=2.12.5",
    "orbitalis~=1.1.4",
    "scipy~=1.17.0",
    "pandas~=3.0.0",
    "argparse_dataclass~=2.0.0",
    "aiohttp~=3.13.3",
    "aiomqtt~=2.5.0"
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
mockpt = "mockpt.cli.cli:main"